# rich-text-editor

./: .mcp.json  Cargo.toml  LICENSE  README.md  build.rs
.claude/: settings.local.json
doc/: mcp.md  project.md
man/: MANIFEST.json  MANIFEST.md  build.json  build.md  viewer.bat
man/src/: lib.json  lib.md  main.json  main.md
man/ui/: main.json  main.md
memory/: MEMORY.md  project_status.md  skparagraph_implementation.md
proj/: FIXES  ISSUES  PHASES  PROJECT  RULES  TODO  UIUX  rulestools.toml
proj/DONES/: TODO-phase1-scaffold
src/: lib.rs  main.rs  render.rs
src/adapter/: editor_app_adp.rs  editor_state_adp.rs  editor_state_adp_tests.rs  key_handler_adp.rs  key_nav_adp.rs  mod.rs
src/core/: mod.rs  tokenizer.rs  tokenizer_inline.rs
src/document/: frontmatter.rs  mod.rs  parser.rs  serializer.rs
src/editor/: commands.rs  mod.rs  undo.rs
src/gateway/: file_ops.rs  mod.rs
src/mcp/: mod.rs
src/media/: mod.rs
src/pal/: cursor.rs  cursor_rect_pal.rs  media.rs  media_rendering.rs  mod.rs  navigation.rs  navigation_tests.rs  paragraph.rs  paragraph_builder.rs  paragraph_cache.rs  paragraph_cache_tests.rs  paragraph_renderable.rs  paragraph_tests.rs  render.rs  selection.rs  selection_rects_pal.rs
src/renderer/: cursor.rs  media.rs  mod.rs  paragraph.rs
src/shared/: colors.rs  document_types_x.rs  durations.rs  mod.rs  sizes.rs
src/state/: limits.rs  mod.rs  paths.rs
src/ui/: mod.rs
ui/: main.slint  types.slint
ui/editor/: editor-view.slint
ui/globals/: theme.slint
ui/state/: durations.slint  sizes.slint  view-states.slint
(+113 files in other folders)
